fix: change z-index of menu in MenuFloatingBtn

--- a/public/assets/styles/MenuFloatingBtn.module.css
+++ b/public/assets/styles/MenuFloatingBtn.module.css
@@ -35,7 +35,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 100;
+    z-index: 1;
     background: white;
     /*background-color: rgba(223, 215, 215, 0.5);
     backdrop-filter: blur(10px);*/
